[ant] no explicit --add-opens for generate task
No reason to have it explicitly stated in each build script we produce.
Perhaps, shall stick to setOpenPackages(true), just don't want to open more than necessary ATM,
 and keeping this logic inside our own code helps to change this approach in future.